changes in clients and cards

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ APP_PROTOCOL = some_protocol
 APP_HOST = some_host
 APP_PORT = some_port
 MONGO_URL = some_url
+
+EMAIL_SERVER_USERNAME=example@gmail.com
+EMAIL_SERVER_PASSWORD=password
+EMAIL_SERVER_HOST=smtp.gmail.com
+EMAIL_SERVER_PORT=587
